--- a/notebooks/4_polynomial_regression.ipynb
+++ b/notebooks/4_polynomial_regression.ipynb
@@ -275,6 +275,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "  Ajustamos el generador de características con `X_train:"
+      ],
+      "metadata": {
+        "id": "2uFJkFveEeFH"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "poly.fit(X_train.reshape(-1, 1))"
@@ -305,6 +314,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Transformamos los datos en `X_train` con el generador ajustado:"
+      ],
+      "metadata": {
+        "id": "mwRxH8KxEl73"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "poly.transform(X_train.reshape(-1, 1))"
@@ -314,6 +332,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Hacemos lo anterior para los conjuntos `X_train` y `X_test`:"
+      ],
+      "metadata": {
+        "id": "WLxsxu_IEsLZ"
+      }
     },
     {
       "cell_type": "code",
@@ -340,7 +367,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Declaramos nuestro modelo de regresión, en este caso un modelo de regresión lineal simple:"
+        "Ahora, vamos a declarar nuestro modelo de regresión simple para después entrenarlo:"
       ],
       "metadata": {
         "id": "I5TtW0lVFKEU"
